k8s/backend-service-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: LoadBalancer
  ports:
  - port: 8706
    targetPort: 8706
    protocol: TCP
    name: http
  selector:
    app: backend
